--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -70,6 +70,14 @@
             android:background="#0C5732"
             android:src="@drawable/ic_send"
             />
+        <ImageButton
+            android:id="@+id/record"
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="#FF8A07"
+            android:src="@drawable/ic_mic"
+            />
 
 
     </LinearLayout>
