--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -41,6 +41,42 @@
             android:textColor="@color/accent"
             android:textSize="24sp" />
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/audio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:weightSum="10"
+        >
+
+        <TextView
+            android:id="@+id/tvaudio"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Message"
+
+            android:textColor="@color/accent"
+            android:textSize="24sp" />
+
+        <ImageButton
+            android:id="@+id/ibplay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_play"
+            android:background="#7D44AA"
+            android:layout_marginRight="10dp"
+
+            android:textColor="@color/accent"
+            android:textSize="24sp" />
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
